<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.mockuppage.CustomButton
        android:id="@+id/rogueLikeButton"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/roguelike"
        android:textSize="12sp"
        android:textColor="#545456"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.mockuppage.CustomButton
        android:id="@+id/rolePlayingButton"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/role_playing"
        android:textSize="12sp"
        android:textColor="#545456"
        app:layout_constraintBottom_toBottomOf="@+id/rogueLikeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rogueLikeButton"
        app:layout_constraintTop_toTopOf="@+id/rogueLikeButton" />

    <com.example.mockuppage.CustomButton
        android:id="@+id/shooterButton"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/shooter"
        android:textSize="12sp"
        android:textColor="#545456"
        app:layout_constraintEnd_toEndOf="@+id/rogueLikeButton"
        app:layout_constraintStart_toStartOf="@+id/rogueLikeButton"
        app:layout_constraintTop_toBottomOf="@+id/rogueLikeButton" />

    <com.example.mockuppage.CustomButton
        android:id="@+id/adventureButton"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/adventure"
        android:textSize="12sp"
        android:textColor="#545456"
        app:layout_constraintEnd_toEndOf="@+id/rolePlayingButton"
        app:layout_constraintStart_toStartOf="@+id/rolePlayingButton"
        app:layout_constraintTop_toBottomOf="@+id/rolePlayingButton" />

    <com.example.mockuppage.CustomButton
        android:id="@+id/strategyButton"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/strategy"
        android:textSize="12sp"
        android:textColor="#545456"
        app:layout_constraintEnd_toEndOf="@+id/rogueLikeButton"
        app:layout_constraintStart_toStartOf="@+id/rogueLikeButton"
        app:layout_constraintTop_toBottomOf="@+id/shooterButton" />

    <com.example.mockuppage.CustomButton
        android:id="@+id/sportsButton"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/sports"
        android:textSize="12sp"
        android:textColor="#545456"
        app:layout_constraintEnd_toEndOf="@+id/rolePlayingButton"
        app:layout_constraintStart_toStartOf="@+id/rolePlayingButton"
        app:layout_constraintTop_toBottomOf="@+id/adventureButton" />

    <com.example.mockuppage.CustomButton
        android:id="@+id/actionButton"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/action"
        android:textSize="12sp"
        android:textColor="#545456"
        app:layout_constraintEnd_toEndOf="@+id/rogueLikeButton"
        app:layout_constraintStart_toStartOf="@+id/rogueLikeButton"
        app:layout_constraintTop_toBottomOf="@+id/strategyButton" />

    <com.example.mockuppage.CustomButton
        android:id="@+id/boardButton"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/board"
        android:textSize="12sp"
        android:textColor="#545456"
        app:layout_constraintEnd_toEndOf="@+id/rolePlayingButton"
        app:layout_constraintStart_toStartOf="@+id/rolePlayingButton"
        app:layout_constraintTop_toBottomOf="@+id/sportsButton" />

    <TextView
        android:id="@+id/goTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/go"
        android:textColor="#147efb"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/boardButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/actionButton"
        app:layout_constraintTop_toBottomOf="@+id/boardButton"
        app:layout_constraintVertical_bias="0.0" />



</android.support.constraint.ConstraintLayout>